# cloud-atlas

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  setup.sh
.agents/: AGENTS.md
.cargo/: config.toml
.claude/: settings.json
.claude/skills/add-collector/: SKILL.md
.claude/skills/add-provider/: SKILL.md
atlas-cli/: Cargo.toml
atlas-cli/src/: main.rs
atlas-lib/: Cargo.toml  mock_atlas.dot  mock_atlas_azure.dot  mock_atlas_cloudflare.dot  mock_atlas_gcp.dot
atlas-lib/examples/: demo.rs
atlas-lib/src/: atlas.rs  cloud.rs  fixtures.rs  lib.rs  main.rs
atlas-lib/src/api/azure/: client.rs  models.rs
atlas-lib/src/api/google/: client.rs  compute.rs  compute_network.rs  dns.rs  functions.rs  gke.rs  mod.rs  pubsub.rs  run.rs  sql.rs  storage.rs
atlas-lib/src/atlas/: definition.rs  engine.rs  export.rs  graph_builder.rs  patch.rs  projector.rs  tests.rs  util.rs
atlas-lib/src/atlas/projector/: aws.rs  azure.rs  cloudflare.rs  gcp.rs  mod.rs
atlas-lib/src/cloud/: amazon.rs  definition.rs  google.rs
atlas-lib/src/cloud/amazon/: api_gateway.rs  cloudfront.rs  collector_tests.rs  container_service.rs  dynamodb.rs  eks.rs  eventbridge.rs  iam.rs  instance.rs  lambda.rs  load_balancer.rs  network.rs  networking.rs  provider.rs  rds.rs  resource.rs  route53.rs  security_group.rs  sns.rs  sqs.rs
atlas-lib/src/cloud/azure/: provider.rs
atlas-lib/src/cloud/cloudflare/: d1.rs  dns.rs  durable_objects.rs  kv.rs  mod.rs  provider.rs  r2.rs  worker.rs  zone.rs
atlas-lib/src/cloud/google/: dns.rs  firewall.rs  functions.rs  gke.rs  instance.rs  provider.rs  sql.rs
atlas-lib/src/cloud/google/compute_network/: collector.rs
atlas-lib/src/cloud/google/pubsub/: collector.rs
atlas-lib/src/cloud/google/run/: collector.rs
atlas-lib/src/cloud/google/storage/: collector.rs
atlas-lib/tests/: azure_collectors.rs  cloudflare_collectors.rs  gcp_collectors.rs
atlas-render/: Cargo.toml  README.md
atlas-render/atlas-layout/: Cargo.toml
atlas-render/atlas-layout-wasm/: Cargo.toml
atlas-render/atlas-layout-wasm/src/: lib.rs
atlas-render/atlas-layout/examples/: layout_demo.rs
atlas-render/atlas-layout/src/: forceatlas2.rs  graph.rs  lib.rs  quadtree.rs
atlas-render/atlas-web/: .gitignore  README.md  biome.json  capture.spec.ts  env.d.ts  index.html  package.json  playwright.config.ts  serve.ts  tsconfig.json  vite.config.ts
atlas-render/atlas-web/e2e/: render.spec.ts  test-shake.spec.ts
atlas-render/atlas-web/src/: app.css  graph.ts  main.ts  style.ts
atlas-render/atlas-web/src/lib/: GraphController.ts  graph.test.ts  graph.ts  style.test.ts  style.ts
atlas-render/atlas-web/src/routes/: +page.svelte
atlas-render/atlas-web/test/: graph.test.ts  style.test.ts
atlas-render/atlas-web/tests/: global-setup.ts  render.spec.ts
atlas-server/: Cargo.toml  README.md
atlas-server/src/: http.rs  main.rs  poll.rs  state.rs  ws.rs
docs/: audit_findings.md  change_monitoring_design.md  checkpoint.md  graph_rendering_design.md  network_inference_design.md
src/: amazon.rs  atlas.rs  aws_config.rs  cloud.rs  cloud_config.rs  ec2.rs  main.rs  neo4j_client.rs
src/amazon/: instance.rs  provider.rs  resource.rs
src/atlas/: projector.rs  tests.rs
src/cloud/: amazon.rs  definition.rs
src/cloud/amazon/: container_service.rs  eventbridge.rs  iam.rs  instance.rs  lambda.rs  network.rs  provider.rs  resource.rs
xtask/: Cargo.toml
xtask/src/: dev.rs  main.rs  tasks.rs
