[package]
name = "atlas-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive", "unicode"] }
tokio = { version = "1.21", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "atlas"
path = "src/main.rs"
