[package]
name = "atlas-cli"
description = "CLI to graph infrastructure and output it as a DOT file."
version = "0.1.0"
edition = "2021"
authors = ["KMC <kenny.kor.seo@gmail.com>"]
repository = "https://github.com/k-cross/cloud-atlas"
categories = ["command-line-utilities"]
documentation = "https://github.com/k-cross/cloud-atlas"
keywords = ["AWS", "cloud", "graph", "infrastructure"]
license = "MPL2"
readme = "README.md"

[dependencies]
atlas-lib = {path = "../atlas-lib"}
clap = { version = "4.0", features = ["derive", "unicode"] }
petgraph = "0.6"
tokio = { version = "1.21", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "atlas"
path = "src/main.rs"
