[package]
name = "atlas-lib"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/k-cross/cloud-atlas"
documentation = "https://github.com/k-cross/cloud-atlas"
keywords = ["AWS", "cloud", "graph", "infrastructure"]
license = "MPL2"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.0"
aws-sdk-config = "1.0"
aws-sdk-ec2 = "1.0"
aws-sdk-ecs = "1.0"
aws-sdk-eventbridge = "1.0"
aws-sdk-lambda = "1.0"
aws-types = "1.0"
futures = "0.3"
petgraph = "0.7"
tokio = { version = "1.21", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.2", features = ["v4"] }
