[package]
name = "atlas-lib"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/k-cross/cloud-atlas"
documentation = "https://github.com/k-cross/cloud-atlas"
keywords = ["AWS", "cloud", "graph", "infrastructure"]
license = "MPL2"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.0"
aws-sdk-apigateway = "1.0"
aws-sdk-cloudfront = "1.0"
aws-sdk-config = "1.0"
aws-sdk-dynamodb = "1.0"
aws-sdk-ec2 = "1.0"
aws-sdk-ecs = "1.0"
aws-sdk-eks = "1.0"
aws-sdk-elasticloadbalancingv2 = "1.0"
aws-sdk-eventbridge = "1.0"
aws-sdk-lambda = "1.0"
aws-sdk-rds = "1.0"
aws-sdk-route53 = "1.0"
aws-sdk-sns = "1.0"
aws-sdk-sqs = "1.0"
azure_core = "1.0.0"
azure_identity = "1.0.0"
cloudflare = "0.14.0"
futures = "0.3"
petgraph = "0.7"
rayon = "1.12.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.8"
uuid = { version = "1.2", features = ["v4"] }
yup-oauth2 = "11"
aws-smithy-types = "1.0"
