[package]
name = "atlas-server"
description = "Live backend: owns the in-memory graph, polls providers, and pushes incremental patches over WebSocket."
version = "0.1.0"
edition = "2024"
authors = ["KMC <kenny.kor.seo@gmail.com>"]
repository = "https://github.com/k-cross/cloud-atlas"
license = "MPL2"
readme = "README.md"

[dependencies]
atlas-lib = { path = "../atlas-lib" }
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4.0", features = ["derive", "unicode"] }
futures = "0.3"
petgraph = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "atlas-server"
path = "src/main.rs"
