[package]
name = "atlas-layout"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/k-cross/cloud-atlas"
license = "MPL2"
description = "Force-directed layout engine for cloud-atlas render snapshots. Pure Rust, wasm-compatible."

[dependencies]
rayon = { version = "1.12", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
# Parallel force computation. Usable natively today; browser wasm needs
# threads (SharedArrayBuffer + atomics, e.g. wasm-bindgen-rayon) — see README.
parallel = ["dep:rayon"]
